--- a/NewsManagementMVC/Views/_ViewImports.cshtml
+++ b/NewsManagementMVC/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using NewsManagementMVC
 @using NewsManagementMVC.Models
 @using NewsManagementMVC.Models.ViewModels.Account
+@using NewsManagementMVC.Models.ViewModels.NewsArticle
 @using FUNewsManagementSystem.BusinessObject
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
