--- a/NewsManagementMVC/Views/Categories/Create.cshtml
+++ b/NewsManagementMVC/Views/Categories/Create.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Create";
+    var parentList = (SelectList)ViewData["ParentCategoryId"];
 }
 
 <h1>Create</h1>
@@ -12,25 +13,35 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
             <div class="form-group">
                 <label asp-for="CategoryName" class="control-label"></label>
                 <input asp-for="CategoryName" class="form-control" />
                 <span asp-validation-for="CategoryName" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="CategoryDesciption" class="control-label"></label>
                 <input asp-for="CategoryDesciption" class="form-control" />
                 <span asp-validation-for="CategoryDesciption" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="ParentCategoryId" class="control-label"></label>
-                <select asp-for="ParentCategoryId" class ="form-control" asp-items="ViewBag.ParentCategoryId"></select>
+                <select asp-for="ParentCategoryId" class="form-control" asp-items="parentList">
+                    <option value="">-- None --</option>
+                </select>
             </div>
+
             <div class="form-group">
                 <label asp-for="IsActive" class="control-label"></label>
-                <input asp-for="IsActive" class="form-control" />
-                <span asp-validation-for="IsActive" class="text-danger"></span>
+                <select asp-for="IsActive" class="form-control">
+                    <option value="">-- None --</option>
+                    <option value="true">True</option>
+                    <option value="false">False</option>
+                </select>
             </div>
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
@@ -43,5 +54,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
