--- a/NewsManagementMVC/Views/Categories/Delete.cshtml
+++ b/NewsManagementMVC/Views/Categories/Delete.cshtml
@@ -33,7 +33,7 @@
             @Html.DisplayNameFor(model => model.ParentCategory)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ParentCategory.CategoryDesciption)
+            @Html.DisplayFor(model => model.ParentCategory.CategoryName)
         </dd>
     </dl>
     
