--- a/NewsManagementMVC/Views/Categories/Edit.cshtml
+++ b/NewsManagementMVC/Views/Categories/Edit.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Edit";
+    var parentList = (SelectList)ViewData["ParentCategoryId"];
 }
 
 <h1>Edit</h1>
@@ -25,13 +26,17 @@
             </div>
             <div class="form-group">
                 <label asp-for="ParentCategoryId" class="control-label"></label>
-                <select asp-for="ParentCategoryId" class="form-control" asp-items="ViewBag.ParentCategoryId"></select>
-                <span asp-validation-for="ParentCategoryId" class="text-danger"></span>
+                <select asp-for="ParentCategoryId" class="form-control" asp-items="parentList">
+                    <option value="">-- None --</option>
+                </select>
             </div>
             <div class="form-group">
                 <label asp-for="IsActive" class="control-label"></label>
-                <input asp-for="IsActive" class="form-control" />
-                <span asp-validation-for="IsActive" class="text-danger"></span>
+                <select asp-for="IsActive" class="form-control">
+                    <option value="">-- None --</option>
+                    <option value="true">True</option>
+                    <option value="false">False</option>
+                </select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
