Fix data type + move validation to viewmodel

--- a/NewsManagementMVC/Views/Account/Profile.cshtml
+++ b/NewsManagementMVC/Views/Account/Profile.cshtml
@@ -79,17 +79,17 @@
                     }
 
                     <div class="mb-3">
-                        <label for="CurrentPassword" class="form-label">Current Password</label>
+                        <label class="form-label">Current Password</label>
                         <input type="password" name="CurrentPassword" class="form-control" required />
                     </div>
 
                     <div class="mb-3">
-                        <label for="NewPassword" class="form-label">New Password</label>
+                        <label class="form-label">New Password</label>
                         <input type="password" name="NewPassword" class="form-control" required minlength="6" />
                     </div>
 
                     <div class="mb-3">
-                        <label for="ConfirmPassword" class="form-label">Confirm New Password</label>
+                        <label class="form-label">Confirm New Password</label>
                         <input type="password" name="ConfirmPassword" class="form-control" required minlength="6" />
                     </div>
                 </div>
