--- a/NewsManagementMVC/Views/Auth/AccessDenied.cshtml
+++ b/NewsManagementMVC/Views/Auth/AccessDenied.cshtml
@@ -1,4 +1,8 @@
-﻿<style>
+﻿@{
+    Layout = "_LayoutMinimal";
+}
+
+<style>
     * {
         -webkit-box-sizing: border-box;
         box-sizing: border-box;
@@ -45,7 +49,7 @@
                 -webkit-transform: translateX(-50%);
                 -ms-transform: translateX(-50%);
                 transform: translateX(-50%);
-                background: url('../../wwwroot//images/bg.jpg') no-repeat;
+                background: url('/images/bg.jpg') no-repeat;
                 -webkit-background-clip: text;
                 -webkit-text-fill-color: transparent;
                 background-size: cover;
