Add css for newsarticle

--- a/NewsManagementMVC/Views/Shared/_Layout.cshtml
+++ b/NewsManagementMVC/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                     }
                     @if(isStaff)
                     {
-                        <a href="/Category/Index" class="">Category</a>
+                        <a href="/Categories/Index" class="">Category</a>
                     }
                     @if(isAdmin)
                     {
